@@ -1,3 +1,8 @@
+2021-04-21  Tankut Baris Aktemur  <tankut.baris.aktemur@intel.com>
+
+	* gdb.texinfo (GDB/MI Breakpoint Information): Update the
+	description for the 'enabled' field of breakpoint locations.
+
 2020-09-13  Pedro Alves  <pedro@palves.net>
 
 	* gdb.texinfo (GDB/MI Breakpoint Commands): Document
